--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,38 +1,49 @@
 name: Monitor festival (pulito)
 
 on:
-  schedule:
-    - cron: "0 6 * * 1"
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Setup Python
+    steps:
+      # 1. Checkout completo del repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # 2. Allinea con main prima di lavorare
+      - name: Allinea con origin/main
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git pull --rebase origin main || true
+
+      # 3. Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.x'
 
-      - name: Install deps
-        run: pip install pandas
+      # 4. Installa dipendenze
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || true
 
-      - name: Archivia pagine
-        run: bash scripts/archive_pages.sh
-
+      # 5. Esegui lo script principale
       - name: Genera report
-        run: python scripts/generate_report.py
+        run: |
+          chmod +x scripts/archive_pages.sh
+          ./scripts/archive_pages.sh
+          python scripts/generate_report.py
 
-      - name: Commit automatico
+      # 6. Commit e push dell'aggiornamento
+      - name: Commit e push
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "crawl+report: aggiornamento settimanale"
-          file_pattern: |
-            data/raw/**
-            reports/ultimo_report.md
-            config/sources.txt
-            scripts/**
+          commit_message: "chore: aggiornamento report"
+          file_pattern: reports/ultimo_report.md
+          push_options: --force-with-lease
