--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,43 +1,59 @@
-from pathlib import Path
-from datetime import datetime
-import pandas as pd
+name: Monitor festival (pipeline semplice)
 
-data = Path("data/records.csv")
-reports = Path("reports"); reports.mkdir(parents=True, exist_ok=True)
-out = reports / "ultimo_report.md"
+on:
+  workflow_dispatch: {}   # lo avvii a mano dal tab Actions
 
-if not data.exists():
-    with out.open("a", encoding="utf-8") as f:
-        f.write("\n_(records.csv mancante: nessun dato da analizzare)_\n")
-    raise SystemExit(0)
+jobs:
+  run:
+    runs-on: ubuntu-latest
+    timeout-minutes: 12
 
-df = pd.read_csv(data)
+    steps:
+      # 1) Prende il repo
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-if "anno" in df.columns:
-    df["anno"] = pd.to_numeric(df["anno"], errors="coerce")
+      # 2) Setup git per il push finale
+      - name: Configura git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git reset --hard origin/main
 
-now = datetime.now().strftime("%Y-%m-%d %H:%M")
+      # 3) Installa dipendenze Python minime
+      - name: Installa dipendenze
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests pandas
 
-# ultimi ~12 mesi se c'è la colonna anno (grezzo)
-recent = df
-if df["anno"].notna().any():
-    recent = df[df["anno"] >= df["anno"].max() - 1]
+      # 4) Scarica le pagine elencate in config/sources.txt con lo script Python
+      - name: Scarica pagine dei festival (Python)
+        run: |
+          python3 scripts/archive_pages.py
 
-by_fest = recent.groupby("festival")["opera"].count().sort_values(ascending=False)
+      # 5) Rigenera il report (append analisi se lo script esiste)
+      - name: Header report (ora di Roma)
+        run: |
+          mkdir -p reports
+          {
+            echo "# Report festival – aggiornato $(TZ=Europe/Rome date +'%Y-%m-%d %H:%M %Z')"
+            echo
+          } > reports/ultimo_report.md
 
-keys = ["linguaggio","drammaturgia","innovazione","politico","sociale","corpo","regia","ibridazione","struttura","emotivo"]
-motifs = {k:0 for k in keys}
-for s in df.get("motivazione", pd.Series(dtype=str)).dropna().astype(str).str.lower():
-    for k in keys:
-        if k in s:
-            motifs[k] += 1
-motifs_series = pd.Series(motifs).sort_values(ascending=False)
+      - name: Aggiungi analisi dal CSV (se presente)
+        run: |
+          if [ -f scripts/generate_report.py ]; then
+            python3 scripts/generate_report.py
+          else
+            echo "_Nessuna analisi: scripts/generate_report.py mancante_" >> reports/ultimo_report.md
+          fi
 
-parts = []
-parts.append("## Trend ultimi 12 mesi (conteggio opere segnalate)")
-parts.append(by_fest.to_markdown() if len(by_fest) else "_Nessun dato_")
-parts.append("\n## Pattern ricorrenti nelle motivazioni")
-parts.append(motifs_series.to_frame("occorrenze").to_markdown() if motifs_series.sum() else "_Nessun pattern rilevato_")
-
-with out.open("a", encoding="utf-8") as f:
-    f.write("\n".join(parts) + "\n")
+      # 6) Commit e push forzato di report e raw
+      - name: Commit e push
+        run: |
+          git add reports/ultimo_report.md data/raw data/records.csv || true
+          git commit -m "crawl+report: aggiornamento" || echo "Niente da committare"
+          git push origin HEAD:main --force
