--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,21 +1,18 @@
-name: Monitor festival (pipeline semplice)
+name: Monitor festival (con log visibili)
 
 on:
-  workflow_dispatch: {}   # lo avvii a mano dal tab Actions
+  workflow_dispatch: {}
 
 jobs:
   run:
     runs-on: ubuntu-latest
     timeout-minutes: 12
-
     steps:
-      # 1) Prende il repo
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2) Setup git per il push finale
       - name: Configura git
         run: |
           git config --global user.name "github-actions[bot]"
@@ -23,18 +20,25 @@ jobs:
           git fetch origin main
           git reset --hard origin/main
 
-      # 3) Installa dipendenze Python minime
-      - name: Installa dipendenze
+      - name: DEBUG - Prima dell'esecuzione
+        run: |
+          echo "----- ROOT -----"; ls -la
+          echo "----- PRIMI 3 LIVELLI -----"; find . -maxdepth 3 -type f | sort
+          echo "----- config/sources.txt -----"
+          cat config/sources.txt || echo "MANCANTE"
+
+      - name: Installa dipendenze Python
         run: |
           python -m pip install --upgrade pip
           pip install requests pandas
 
-      # 4) Scarica le pagine elencate in config/sources.txt con lo script Python
-      - name: Scarica pagine dei festival (Python)
+      - name: Scarica pagine (Python)
         run: |
+          echo "Eseguo scripts/archive_pages.py"
           python3 scripts/archive_pages.py
+          echo "----- CONTENUTO data/raw -----"
+          find data/raw -maxdepth 2 -type f | sort || echo "data/raw MANCANTE"
 
-      # 5) Rigenera il report (append analisi se lo script esiste)
       - name: Header report (ora di Roma)
         run: |
           mkdir -p reports
@@ -51,7 +55,11 @@ jobs:
             echo "_Nessuna analisi: scripts/generate_report.py mancante_" >> reports/ultimo_report.md
           fi
 
-      # 6) Commit e push forzato di report e raw
+      - name: DEBUG - Differenze prima del commit
+        run: |
+          echo "----- FILE MODIFICATI -----"
+          git status --porcelain=v1 || true
+
       - name: Commit e push
         run: |
           git add reports/ultimo_report.md data/raw data/records.csv || true
